# dasImgui

./: .gitignore  CMakeLists.txt  conanfile.txt
daslib/: imgui_boost.das  imgui_node_editor_boost.das  imnodes_boost.das
example/: NodeEditor.json  Simple.json  example.das  imgui_demo.das  imgui_node_editor.das  imgui_node_editor_stress.das  imgui_opengl2.das  imgui_opengl_aot.cpp  imgui_vulkan.das  imnode_editor.das
greyprint/: NodeEditor.json  command_que.das  greyprint.cpp  greyprint.das  guid_2_id.das  instructions.das  instructions_math.das  instructions_model.das  instructions_scalar.das  instructions_ui.das  model.das  model_cache.das  model_eval.das  preview.das  produce.das  undo_stack.das
greyprint/examples/: action_mad.greyprint  action_parrot.greyprint  add_two_scalars.greyprint  all_types.greyprint  better_parrot.greyprint  blend_add.greyprint  blend_color_and_grad.greyprint  blur.greyprint  brick_pbr.greyprint  compose_parrot.greyprint  image_times_gradient.greyprint  madd.action  new_name.greyprint  parrot.greyprint  single_gradient.greyprint  single_image.greyprint  smart_blur.action  sobel.greyprint  stupid_blur.greyprint
imgui/: imgui.h
imgui-1.81/: imgui.h
imgui-node-editor/: imgui_node_editor.cpp
src/: aot_imgui.h  aot_imgui_node_editor.h  cb_dasIMGUI.h  cb_dasIMGUI_NODE_EDITOR.h  dasIMGUI.cpp  dasIMGUI.func.decl.inc  dasIMGUI.func.reg.inc  dasIMGUI.func_1.cpp  dasIMGUI.func_10.cpp  dasIMGUI.func_11.cpp  dasIMGUI.func_12.cpp  dasIMGUI.func_13.cpp  dasIMGUI.func_14.cpp  dasIMGUI.func_15.cpp  dasIMGUI.func_16.cpp  dasIMGUI.func_17.cpp  dasIMGUI.func_18.cpp  dasIMGUI.func_19.cpp  dasIMGUI.func_2.cpp  dasIMGUI.func_20.cpp  dasIMGUI.func_21.cpp  dasIMGUI.func_22.cpp  dasIMGUI.func_23.cpp  dasIMGUI.func_24.cpp  dasIMGUI.func_25.cpp  dasIMGUI.func_26.cpp  dasIMGUI.func_27.cpp  dasIMGUI.func_3.cpp  dasIMGUI.func_4.cpp  dasIMGUI.func_5.cpp  dasIMGUI.func_6.cpp  dasIMGUI.func_7.cpp  dasIMGUI.func_8.cpp  dasIMGUI.func_9.cpp  dasIMGUI.main.cpp  dasIMGUI_NODE_EDITOR.cpp  dasIMGUI_NODE_EDITOR.enum.add.inc  dasIMGUI_NODE_EDITOR.enum.class.inc  dasIMGUI_NODE_EDITOR.func_1.cpp  dasIMGUI_NODE_EDITOR.func_2.cpp  (+71 more)
